--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,10 @@
             <h1>Enzo Hins</h1>
             <nav>
                 <ul>
-                    <li><a href="#top">Home</a></li>
-                    <li><a href="#about-me">About Me</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="/#top">Home</a></li>
+                    <li><a href="/#about-me">About Me</a></li>
+                    <li><a href="/#projects">Projects</a></li>
+                    <li><a href="/blog">Blog</a></li>
                 </ul>
             </nav>
         </header>
